[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/upload_panel.gd" id="1"]

[node name="UploadPanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = -24.0

[node name="VBox" type="VBoxContainer" parent="Margin"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="Header" type="Label" parent="Margin/VBox"]
text = "Circuit Upload"
theme_override_font_sizes/font_size = 40
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="Subheader" type="Label" parent="Margin/VBox"]
text = "Upload or drop your circuit files, we save copies in a safe ‘uploads’ folder, then (on Windows/macOS/Linux) we run ngspice to generate the data Godot will visualize."
autowrap_mode = 3
theme_override_font_sizes/font_size = 13
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="ControlsRow" type="HBoxContainer" parent="Margin/VBox"]
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="UploadButton" type="Button" parent="Margin/VBox/ControlsRow"]
text = "Upload Files…"
size_flags_horizontal = 3

[node name="RunButton" type="Button" parent="Margin/VBox/ControlsRow"]
text = "Run Simulation"
size_flags_horizontal = 3

[node name="ClearButton" type="Button" parent="Margin/VBox/ControlsRow"]
text = "Clear"
size_flags_horizontal = 3

[node name="DropZone" type="PanelContainer" parent="Margin/VBox"]
custom_minimum_size = Vector2(0, 110)
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="DropZoneMargin" type="MarginContainer" parent="Margin/VBox/DropZone"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 14.0
offset_top = 14.0
offset_right = -14.0
offset_bottom = -14.0

[node name="DropZoneVBox" type="VBoxContainer" parent="Margin/VBox/DropZone/DropZoneMargin"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 6

[node name="DropTitle" type="Label" parent="Margin/VBox/DropZone/DropZoneMargin/DropZoneVBox"]
text = "Drop files here"
theme_override_font_sizes/font_size = 16

[node name="DropHint" type="Label" parent="Margin/VBox/DropZone/DropZoneMargin/DropZoneVBox"]
text = ".sch, .spice/.cir/.net, .txt. Native: drop from Explorer anywhere onto the window. Web: use Upload Files."
autowrap_mode = 3
theme_override_font_sizes/font_size = 12

[node name="StagedList" type="ItemList" parent="Margin/VBox"]
size_flags_horizontal = 3
size_flags_vertical = 3
allow_reselect = true

[node name="StatusRow" type="HBoxContainer" parent="Margin/VBox"]
theme_override_constants/separation = 6

[node name="StatusPrefix" type="Label" parent="Margin/VBox/StatusRow"]
text = "Status:"
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="StatusValue" type="Label" parent="Margin/VBox/StatusRow"]
text = "idle"
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(1, 0.65, 0.2, 1) # orange-ish default

[node name="Output" type="RichTextLabel" parent="Margin/VBox"]
size_flags_horizontal = 3
size_flags_vertical = 3
fit_content = false
scroll_active = true
selection_enabled = true

[node name="FileDialog" type="FileDialog" parent="."]
access = 2
file_mode = 1
use_native_dialog = true
title = "Select circuit files"
filters = PackedStringArray("*.spice, *.cir, *.net, *.txt ; Netlists", "*.sch ; Xschem schematics", "* ; All files")
